--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
+$white: rgb(255, 255, 255);
+$red: #da552f;
+$blue: #2EC4B6;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
+$green: #7DAA92;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$dark-gray: #616668
